# exif-gps-mapper

./: .gitignore  README.md  project_scripts.py  pyproject.toml
config/: config.yaml.example  secrets.yaml.example
exif_gps_mapper/: __init__.py  authenticate.py  exceptions.py  exifdatabase.py  transactionpool.py
exif_gps_mapper/accesslink/: transaction.py  transaction_pool.py
exif_gps_mapper/helpers/: config.py  db.py  fileio.py
exif_gps_mapper/materialisers/: exercise_materializer.py  gpx_materializer.py  materializer.py
tests/: test_exercise_materializer.py  test_exifdatabase.py  test_transaction.py  test_transactionpool.py
